rtty/testhtml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
# annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /health
    # traefik.ingress.kubernetes.io/forwarding-timeout: "3600s" 
spec:
  rules:
  - host: 89.169.146.239.sslip.io
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: external-service
            port:
                number: 9994
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: "10.13.13.2.sslip.io"
  ports:
  - port: 9994
