rtty/testhtml/ingress_loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
# annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /health
    # traefik.ingress.kubernetes.io/forwarding-timeout: "3600s" 
spec:
  rules:
  - host: 10.13.13.1.sslip.io
    http:
      paths:
      - path: /loki/api/v1/push
        pathType: Prefix
        backend:
          service:
            name: loki
            port:
              number: 3100
