rtty/testhtml/ingress_ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /ws1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # traefik.ingress.kubernetes.io/forwarding-timeout: "3600s" 
spec:
  rules:
  - host: 89.169.146.239.sslip.io
    http:
      paths:
      - path: /ws1
        pathType: Prefix
        backend:
          service:
            name: ws-service
            port:
              number: 9994

---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  type: ExternalName
  externalName: "10.13.13.2.sslip.io"
  ports:
  - port: 9994

# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: default-timeout
#   namespace: default
# spec:
#   timeout:
#     idle: 10s
